[package]
name = "dayquest_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "3.0.0"
ctrlc = "3.4.5"
dotenv = "0.15.0"
env_logger = "0.11.6"
figment = { version = "0.10.19", features = ["json", "serde_json"] }
log = "0.4.25"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.138"
serenity = "0.12.4"
tokio = { version = "1.43.0", features = ["full"] }
